Corregí algunos errores

--- a/Copy/index.html
+++ b/Copy/index.html
@@ -35,7 +35,8 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>Welcome</h1>
+                <h1>Welcome Adoflo123</h1>
+                <p>Suck my dick Adolfooooo <br /> Josué is gay, he likes dicks</p>
                 <p>Lorem ipsum dolor sit amet consectetur <br />
                    adipisicing elit. Nesciunt, corporis.
                 </p>
