--- a/Copy/index.html
+++ b/Copy/index.html
@@ -18,7 +18,7 @@
                 <li><a href="services">Services</a></li>
                 <li><a href="contact">Contact</a></li>
             </ul>
-            <a href="/Copy/login/login.html" class="action_btn" target="_blank">Get Started</a>
+            <a href="/Copy/login/login.html" class="action_btn" >Get Started</a>
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
@@ -29,7 +29,7 @@
                 <li><a href="about">About</a></li>
                 <li><a href="services">Services</a></li>
                 <li><a href="contact">Contact</a></li>
-                <li><a href="/Copy/login/login.html" class="action_btn" target="_blank">Get Started</a></li>
+                <li><a href="/Copy/login/login.html" class="action_btn">Get Started</a></li>
             </ul>
         </div>
     </header>
