--- a/Copy/index.html
+++ b/Copy/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"> <a href="#"> Web Dev Creative</a></div>
+            <div class="logo"> <a href="#"> ErosHub</a></div>
             <ul class="links">
                 <li><a href="hero">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li><a href="services">Services</a></li>
                 <li><a href="contact">Contact</a></li>
             </ul>
-            <a href="/Copy/login/login.html" class="action_btn" >Get Started</a>
+            <a href="/Copy/login/login.html" class="action_btn" >Iniciar</a>
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
@@ -29,14 +29,14 @@
                 <li><a href="about">About</a></li>
                 <li><a href="services">Services</a></li>
                 <li><a href="contact">Contact</a></li>
-                <li><a href="/Copy/login/login.html" class="action_btn">Get Started</a></li>
+                <li><a href="/Copy/login/login.html" class="action_btn">Iniciar</a></li>
             </ul>
         </div>
     </header>
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>Welcome</h1>
+                <h1>Bienvenido</h1>
                 <p>Lorem ipsum dolor sit amet consectetur <br />
                    adipisicing elit. Nesciunt, corporis.
                 </p>
