--- a/Copy/login/login.html
+++ b/Copy/login/login.html
@@ -27,7 +27,7 @@
                     </div>
                     <button>Log in</button>
                     <div class="register">
-                        <p>Don't have a account<a href="#">Register</a></p>
+                        <p>Don't have a account &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#">Register</a></p>
                     </div>
                 </form>
             </div>
