--- a/Copy/index.html
+++ b/Copy/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>My WebSite</title>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="icon" href="mundo.png"
+    <link rel="stylesheet" href="estilo.css" />
+    <link rel="icon" href="mundo.png" />
 </head>
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"> <a href="#"> ErosHub</a></div>
+            <div class="logo"> <a href="#"> Inkafarma</a></div>
             <ul class="links">
                 <li><a href="hero">Home</a></li>
                 <li><a href="about">About</a></li>
