--- a/Copy/Registro/registro.html
+++ b/Copy/Registro/registro.html
@@ -17,7 +17,7 @@
             <div class="info-childs">
                 <h2>Bienvenidos</h2>
                 <p>Para acceder a la página por favor inicia sesión con sus datos</p>
-                <input type="button" value="Inicia Sesión">
+                <a href="/experimental-web-project/login/login.html"><input type="button" value="Inicia Sesión"></a>
             </div>
         </div>
         <div class="form-information">
